--- a/FileSystemLibrary.uplugin
+++ b/FileSystemLibrary.uplugin
@@ -10,7 +10,7 @@
 	"DocsURL": "www.samuelmetters.co.uk/filesystemlibrary",
 	"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/c8061306eb9b4518ad9183e8a27bee04",
 	"SupportURL": "www.lambdaworks.co.uk",
-	"EngineVersion": "4.22.0",
+	"EngineVersion": "4.26.0",
 	"CanContainContent": true,
 	"Installed": true,
 	"Modules": [
@@ -21,7 +21,8 @@
 			"WhitelistPlatforms": [
 				"Win64",
 				"Win32",
-				"Mac"
+				"Mac",
+				"Linux"
 			]
 		}
 	]
