--- a/FileSystemLibrary.uplugin
+++ b/FileSystemLibrary.uplugin
@@ -8,7 +8,7 @@
 	"CreatedBy": "LambdaWorks",
 	"CreatedByURL": "www.samuelmetters.co.uk/filesystemlibrary",
 	"DocsURL": "www.samuelmetters.co.uk/filesystemlibrary",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/c8061306eb9b4518ad9183e8a27bee04",
 	"SupportURL": "www.lambdaworks.co.uk",
 	"EngineVersion": "4.20.0",
 	"CanContainContent": true,
