Updated to support 5.6

--- a/FileSystemLibrary.uplugin
+++ b/FileSystemLibrary.uplugin
@@ -6,11 +6,12 @@
 	"Description": "Open, Save, Copy, Move and delete files and directories in tranquillity!",
 	"Category": "File System",
 	"CreatedBy": "LambdaWorks",
-	"CreatedByURL": "www.samuelmetters.co.uk/filesystemlibrary",
-	"DocsURL": "www.samuelmetters.co.uk/filesystemlibrary",
-	"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/c8061306eb9b4518ad9183e8a27bee04",
+	"CreatedByURL": "",
+	"DocsURL": "https://lambda-w.github.io/Documentation/docs/FileSystemLibrary/",
+	"MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/0abf4206-c5b5-4a19-af8d-1011235e1282",
+	"FabURL": "com.epicgames.launcher://ue/Fab/product/0abf4206-c5b5-4a19-af8d-1011235e1282",
 	"SupportURL": "www.lambdaworks.co.uk",
-	"EngineVersion": "5.5.0",
+	"EngineVersion": "5.6.0",
 	"CanContainContent": true,
 	"Installed": true,
 	"Modules": [
